--- a/html/Login.html
+++ b/html/Login.html
@@ -30,10 +30,15 @@
 <h4>Email:</h4>
 <input>
 <h4>Mot de passe:</h4>
-<input> <br>
+<input id="remember"> <br>
+<input> <h6>Remember me :</h6>
+<br>
 <button id="log">Login</button>
 </div>
+<div class="img">
+    <img src="/Images/handphone.png" alt="handphone"/>
 
+</div>
 
 </main>
 
