ajouter html de la partie header

--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Via tours Agence</title>
 </head>
 <body>
-    <p>destinations conflicts</p>
+    <header class="header">
+        <img class="logo" src="Images/logo.svg.png" alt="Viatours logo">
+        <nav class="nav">
+            <ul>
+                <li><a href="#">Destinations</a></li>
+                <li><a href="#">Activities</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="btn1">
+            <a href="#">Sign up</a>
+        </div>
+        <div class="btn2">
+            <a href="#">Log in</a>
+        </div>
+    </header>
 </body>
 </html>
