left-side Html et css

--- a/html/Signup.html
+++ b/html/Signup.html
@@ -17,8 +17,18 @@
         </ul>    
     </header>
 <main>
-
-
+<div class="left-side">
+<div class="text">    
+    <p>Notre application<br><span>gratuite.</span></p>
+<div class="store">
+    <img src="/Images/appstore1.png" alt="appstore" class="appstore"/>
+    <img src="/Images/Google Play Badge French Disponible Sur Google Play.png" alt="Google store" class="playstore"/>
+</div>
+</div>
+<div class="handphone">
+    <img src="/Images/handphone.png" alt="handphone" style="width: 700px;" />
+</div>
+</div>
 
 
 
