réaliser partie Header en css. git commit -m

--- a/html/Login.html
+++ b/html/Login.html
@@ -14,35 +14,46 @@
 <li>Destinations</li>
 <li>Activités</li>
 <li>Contact</li>
-<li>Sign up</li>
 </ul>
 </nav>
 </header>
 <main>
+    <div class="login">
     <div class="connexion">
-<h3>Connectez-vous</h3>
+<h3 id="h3"> <span style="color:coral;">Connectez-vous</span> </h3>
 <div class="social-media">
-<img src="/Images/Facebook/icons8-facebook-nouveau-48.png" alt="Facebook"/>
-<img src="/Images/Google/icons8-logo-google-48.png" alt="Google"/>
-<img src="/Images/Apple/icons8-mac-os-50.png" alt="Apple"/>
-</div>
-<h5>Ou</h5>
-<h4>Email:</h4>
-<input>
-<h4>Mot de passe:</h4>
-<input id="remember"> <br>
-<input> <h6>Remember me :</h6>
-<br>
-<button id="log">Login</button>
-</div>
-<div class="img">
-    <img src="/Images/handphone.png" alt="handphone"/>
-
-</div>
-<div>
-  <p>login ana</p>
+<a href="https://www.facebook.com/?locale=fr_FR"> <img src="/Images/Facebook/icons8-facebook-nouveau-48.png" alt="Facebook"/> </a> 
+<a href="https://mail.google.com/mail?hl=fr" >  <img src="/Images/Google/icons8-logo-google-48.png" alt="Google"/> </a>
+<a href="https://support.apple.com/fr-ma/111001" > <img src="/Images/Apple/icons8-mac-os-50.png" alt="Apple"/> </a> 
 </div>
 
+<div class="separator">
+    <div class="separator-line"></div>
+    <div class="separator-text">ou</div>
+    <div class="separator-line"></div>
+</div>
+
+<div class="login-form">
+    <div class="input-container">
+        <h4>Email:</h4>
+        <input type="text" id="email">
+    </div>
+    <div class="input-container">
+        <h4>Mot de passe:</h4>
+        <input type="password" id="remember">
+    </div>
+    <div class="remember-me">
+        <input type="checkbox" id="remember-me">
+        <label id="check-remember" for="remember-me">Remember me</label>
+    </div>
+</div>
+
+ <a href="#"> <button id="log" >Login</button> </a>
+</div>
+<div class="pic-man">
+    <img src="/Images/man-walking.webp" alt="man-walking">
+</div>
+</div>
 </main>
 
 </body>
