faire des modification dans code html

--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -22,5 +22,29 @@
             <a href="#">Log in</a>
         </div>
     </header>
+    <main>
+        <div class="container1">
+            <img src="/Images/london.png" alt="">
+            <div class="search-bar">
+                <input type="text" placeholder="Search for best destinations">
+                <img src="/Images/Search.png" alt="">
+            </div>
+        </div>
+
+        <div class="container2">
+            <h2>TRENDING DESTINATIONS</h2>
+            <div class="card">
+                <div class="img">
+                    <img src="/Images/img1.png" alt="">
+                </div>
+                <div class="card-details">
+                    <h3>Rome, Italy</h3>
+                    <h3>1000$</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                </div>
+                
+            </div>
+        </div>
+    </main>
 </body>
 </html>
