ajouter la partie html du main de page

--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -33,18 +33,147 @@
 
         <div class="container2">
             <h2>TRENDING DESTINATIONS</h2>
+
             <div class="card">
                 <div class="img">
                     <img src="/Images/img1.png" alt="">
                 </div>
-                <div class="card-details">
-                    <h3>Rome, Italy</h3>
-                    <h3>1000$</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
-                </div>
-                
+                    <div class="card-details-left">
+                        <h3>Rome, Italy</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <h3> <img src="/Images/Calendar.png" alt="Calendar"> 2024/04/23</h3>
+                    </div>
+                    <div class="card-details-right">
+                        <h3>1000$</h3>
+                        <div class="cta-btn">
+                            <a href="#">reserver <img src="/Images/Right Arrow.png" alt=""></a>
+                        </div>
+                    </div>
             </div>
+
+            <div class="card">
+                <div class="img">
+                    <img src="/Images/img1.png" alt="">
+                </div>
+                    <div class="card-details-left">
+                        <h3>Tokyo, japan</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <h3> <img src="/Images/Calendar.png" alt="Calendar"> 2024/02/01</h3>
+                    </div>
+                    <div class="card-details-right">
+                        <h3>2500$</h3>
+                        <div class="cta-btn">
+                            <a href="#">reserver <img src="/Images/Right Arrow.png" alt=""></a>
+                        </div>
+                    </div>
+            </div>
+
+            <div class="card">
+                <div class="img">
+                    <img src="/Images/img1.png" alt="">
+                </div>
+                    <div class="card-details-left">
+                        <h3>Paris, France</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <h3> <img src="/Images/Calendar.png" alt="Calendar"> 2024/03/09</h3>
+                    </div>
+                    <div class="card-details-right">
+                        <h3>3500$</h3>
+                        <div class="cta-btn">
+                            <a href="#">reserver <img src="/Images/Right Arrow.png" alt=""></a>
+                        </div>
+                    </div>
+            </div>
+
+            <div class="scroll">
+                <img src="/Images/Prev.png" alt="">
+                <img src="/Images/Right Button.png" alt="">
+            </div>
+
         </div>
+
+        <section>
+
+            <div class="lef-col">
+                <h2>Offer!!!</h2>
+                <h3><span>40</span>% off</h3>
+                <p>Offer will be available from 
+                6th to 9th august</p>
+                <div class="cta-btn">
+                    <a href="#">reserver</a>
+                    <img src="/Images/Right Arrow.png" alt="">
+                </div>
+            </div>
+
+            <div class="right-col">
+                <img src="/Images/fcb.png" alt="">
+            </div>
+
+        </section>
+
+        <div class="container2">
+            <h2>POPULAR DESTINATIONS</h2>
+
+            <div class="card">
+                <div class="img">
+                    <img src="/Images/img1.png" alt="">
+                </div>
+                    <div class="card-details-left">
+                        <h3>Rome, Italy</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <h3> <img src="/Images/Calendar.png" alt="Calendar"> 2024/04/23</h3>
+                    </div>
+                    <div class="card-details-right">
+                        <h3>1000$</h3>
+                        <div class="cta-btn">
+                            <a href="#">reserver <img src="/Images/Right Arrow.png" alt=""></a>
+                        </div>
+                    </div>
+            </div>
+
+            <div class="card">
+                <div class="img">
+                    <img src="/Images/img1.png" alt="">
+                </div>
+                    <div class="card-details-left">
+                        <h3>Tokyo, japan</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <h3> <img src="/Images/Calendar.png" alt="Calendar"> 2024/02/01</h3>
+                    </div>
+                    <div class="card-details-right">
+                        <h3>2500$</h3>
+                        <div class="cta-btn">
+                            <a href="#">reserver <img src="/Images/Right Arrow.png" alt=""></a>
+                        </div>
+                    </div>
+            </div>
+
+            <div class="card">
+                <div class="img">
+                    <img src="/Images/img1.png" alt="">
+                </div>
+                    <div class="card-details-left">
+                        <h3>Paris, France</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+                        <h3> <img src="/Images/Calendar.png" alt="Calendar"> 2024/03/09</h3>
+                    </div>
+                    <div class="card-details-right">
+                        <h3>3500$</h3>
+                        <div class="cta-btn">
+                            <a href="#">reserver <img src="/Images/Right Arrow.png" alt=""></a>
+                        </div>
+                    </div>
+            </div>
+
+            <div class="pagination">
+            </div>
+
+        </div>
+
     </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
