ajouter la partie html du footer

--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -173,7 +173,27 @@
     </main>
 
     <footer>
-        
+        <div class="about-us">
+            <h3>About us</h3>
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la 
+            composition et la mise en page avant impression.
+            Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis </p>
+        </div>
+
+        <div class="contact">
+           <h3>Contact</h3>
+           <h5>N 433 Immeubles 3 Rue Zohour, Béni Mellal</h5> 
+           <h5>contact@viatours.com</h5>
+           <h5>+212 7 600-478 80</h5>
+        </div>
+
+        <div class="social-media">
+            <h3>Follow us</h3>
+            <img src="/Images/Facebook.png" alt="">
+            <img src="/Images/LinkedIn.png" alt="">
+            <img src="/Images/TwitterX.png" alt="">
+            <img src="/Images/Instagram.png" alt="">
+        </div>
     </footer>
 </body>
 </html>
