--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Via tours Agence</title>
+    <link rel="stylesheet" href="/css/Destinations.css">
+    
 </head>
 <body>
     <header class="header">
