ajouter css de partie header

--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Via tours Agence</title>
     <link rel="stylesheet" href="/css/Destinations.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     
 </head>
 <body>
     <header class="header">
-        <img class="logo" src="Images/logo.svg.png" alt="Viatours logo">
+
+        <img class="logo" src="/Images/logo.svg.png" alt="Viatours logo">
         <nav class="nav">
             <ul>
-                <li><a href="#">Destinations</a></li>
+                <li><a href="">Destinations</a></li>
                 <li><a href="#">Activities</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <div class="btn">
+                <a href="#">Sign up</a>  
+            </div>
+            <div class="btn">
+                <a class="btn2" href="Login.html">Log in</a>
+            </div>
         </nav>
-        <div class="btn1">
-            <a href="#">Sign up</a>
-        </div>
-        <div class="btn2">
-            <a href="#">Log in</a>
-        </div>
+        
     </header>
     <main>
         <div class="container1">
@@ -196,6 +201,6 @@
             <img src="/Images/TwitterX.png" alt="">
             <img src="/Images/Instagram.png" alt="">
         </div>
-    </footer>
+    </footer>  
 </body>
 </html>
