--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -31,10 +31,10 @@
     </header>
     <main>
         <div class="container1">
-            <img src="/Images/london.png" alt="">
+            <img class="img" src="/Images/london.png" alt="">
             <div class="search-bar">
-                <input type="text" placeholder="Search for best destinations">
-                <img src="/Images/Search.png" alt="">
+                <img class="icon" src="/Images/Search.png" alt="">
+                <input class="search-input" type="text" placeholder="You looking for ..">
             </div>
         </div>
 
