terminer le code css du partie footer

--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Radley:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Peralta&family=Radley:ital@0;1&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -137,9 +143,9 @@
 
         <section class="section">
 
-            <div class="lef-col">
-                <h2>Offer!!!</h2>
-                <h3><span>40</span>% off</h3>
+            <div class="left-col">
+                <h2>Offer ! ! !</h2>
+                <h3><span>40%</span> off</h3>
                 <p>Offer will be available from 
                 6th to 9th august</p>
                 <div class="cta-btn">
