La dernière modification HTML & CSS et image handphone

--- a/html/Signup.html
+++ b/html/Signup.html
@@ -13,24 +13,27 @@
             <li><a href = "">Destinations</a></li>
             <li><a href = "">Activities</a></li>
             <li><a href = "">Contact</a></li>
-        </ul>    
+        </ul> 
+           
     </header>
 <main>
 <div class="left-side">
-<div class="text">    
-    <p>Notre application<br><span>gratuite.</span></p>
-<div class="stores">
-   <a href=""> <img src="/Images/appstore1.png" alt="appstore" class="store"/></a>
-   <a href=""><img src="/Images/Google Play Badge French Disponible Sur Google Play.png" alt="Google store" class="store"/></a>
+    <div class="text">    
+        <h4>Notre application<br><span>gratuite</span>.</h4>
+            <div class="stores">
+                <a href=""> <img src="/Images/appstore1.png" alt="appstore" class="store"/></a>
+                <a href=""><img src="/Images/Google Play Badge French Disponible Sur Google Play.png" alt="Google store" class="store"/></a>
+            </div>
+    </div>
+        <div class="handphone">
+            <img src="/Images/handphone.png" alt="handphone" />
+        </div>
 </div>
-</div>
-<div class="handphone">
-    <img src="/Images/handphone.png" alt="handphone" style="width: 700px;" />
-</div>
-</div>
+
+
 <div class="right-side">
     <div class="top">
-        <P>Sing up</P>
+        <h4>Sing up</h4>
         <div class="icons">
             <img src="/Images/Apple/icons8-mac-os-50.png" alt="applestore"/>
             <img src="/Images/Facebook/icons8-facebook-nouveau-48.png" alt="Facebook"/>
@@ -39,23 +42,27 @@
     </div>
     <div class="line">
         <span>OU</span></div>
-        
+      <div class="form">
         <div class="nomprenom">
+            <div class="nom">
             <label for="nom">Nom *</label>
-            <input type="text" id="nom" placeholder="nom" >
-            <label for="Prenom">Prenom *</label>
-            <input type="text" id="Prenom">
+            <input type="text" id="nom" placeholder="Entrez votre nom" >
         </div>
+        <div class="prenom">
+            <label for="Prenom">Prenom *</label>
+            <input type="text" id="Prenom" placeholder="Entrez votre  prénom">
+        </div>
+    </div>
 
         <label for="Numero">Numero de telephone *</label>
-        <input type="text" id="Numero">
+        <input type="text" id="Numero" placeholder="Exemple: 06">
         <label for="email">Email*</label>
-        <input type="email" id="email">
+        <input type="email" id="email" placeholder="exemple@exemple.com">
         <label for="password">Mot de passe *</label>
         <input type="password" id="password">
         <input type="submit" value="Confirmer">
 
-</div>
+</div></div>  
 
 
 
