--- a/html/Login.html
+++ b/html/Login.html
@@ -36,22 +36,30 @@
 <div class="login-form">
     <div class="input-container">
         <h4>Email:</h4>
-        <input type="text" id="email">
+        <input type="text" id="email"  placeholder="exemple@gmail.com">
     </div>
     <div class="input-container">
-        <h4>Mot de passe:</h4>
-        <input type="password" id="remember">
+        <h4 >Mot de passe:</h4>
+        <input type="password" id="remember"  placeholder="*****">
     </div>
     <div class="remember-me">
         <input type="checkbox" id="remember-me">
-        <label id="check-remember" for="remember-me">Remember me</label>
+        <label id="check-remember" for="remember-me">Se souvenir de moi</label>
     </div>
 </div>
 
  <a href="#"> <button id="log" >Login</button> </a>
+ <div class="newAccount">
+ <label id="new">Nouveau membre?<a href="Signup.html"><span style="color:coral;"> Sign up</span></a></label>
 </div>
-<div class="pic-man">
+</div>
+<div class="man-walking">
 <img src="/Images/man-walking.webp" alt="man-walking">
+   
+</div>
+
+
+
 </body>
 
 </html>
