--- a/html/Signup.html
+++ b/html/Signup.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-    <a href = ""><img src="/Images/logo.svg.png" alt="viatours" class= "logo"/></a>
+    <a href = "/html/index.html"><img src="/Images/logo.svg.png" alt="viatours" class= "logo"/></a>
         <ul>
-            <li><a href = "">Destinations</a></li>
-            <li><a href = "">Activities</a></li>
-            <li><a href = "">Contact</a></li>
+            <li><a href = "/html/Destinations.html">Destinations</a></li>
+            <li><a href = "/html/Activities.html">Activities</a></li>
+            <li><a href = "/html/Contact.html">Contact</a></li>
         </ul> 
            
     </header>
@@ -60,6 +60,7 @@
         <input type="email" id="email" placeholder="exemple@exemple.com">
         <label for="password">Mot de passe *</label>
         <input type="password" id="password">
+        <label class="deja">Si vous avez déjà un compte,<a href="/html/Login.html"><span style="color: coral;"> Se connecter</span></a></label>
         <input type="submit" value="Confirmer">
 
 </div></div>  
