--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ViaTours</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Viatours</title>
+  <link rel="stylesheet" href="/css/main.css">
+
 </head>
 <body>
-    
+<header>
+  <a href = "/html/index.html"><img src="/Images/logo.svg.png" alt="viatours" class= "logo"/></a>
+  <nav>
+    <div class="nav">
+      <a href = "/html/Destinations.html">Destinations</a>
+      <a href = "/html/Activities.html">Activities</a>
+      <a href = "/html/Contact.html">Contact</a>
+      <a href = "/html/Signup.html">Sign up</a>
+    </div>
+    <a href="/html/Login.html"><button class="buttonin">Sign in</button></a>
+  </nav>
+
+</header>
+<main>
+  <div class="content">
+      <img  src="/Images/Big_pic.png" alt="person" class="img"/>
+    <div class="text">
+  <h3>Des Souvenirs De Voyage Que Vous N’oublierez <span>Jamais</span>.</h3>
+  <p>Des escapades locales aux aventures lointaines, trouvez ce qui vous
+    rend heureux.n’importe quand n’importe où</p>
+  <button class="buttonplus">Explorer plus</button>
+</div>
+  </div>
+  <div class="cards">
+  <h3>Pourquoi nous?</h3>
+    <div class="element">
+  <div class="ticket">
+    <img src="/images/ticket.svg.png" alt="ticket" width="50"/>
+    <p class="tickettitel">Flexibilité ultime</p>
+    <p class="tickettext">Vous avez le contrôle, avec gratuité options d'annulation et de paiement pour satisfaire n'importe quel plan ou budget.</p>
+  </div>
+    <div class="ballon">
+      <img src="/Images/hot-air-balloon.svg.png" alt="hot-air-balloon" width="50"/>
+      <p class="ballontitel">Expériences mémorables</p>
+      <p class="ballontext">Parcourez et réserver des visites et des activités tellement incroyable, tu voudras le dire à tonamis.</p>
+    </div>
+    <div class="diamond">
+      <img src="/Images/diamond.svg fill.png" alt="diamond" width="50"/>
+      <p class="diamondtitel">Qualité</p>
+      <p class="diamondtext">Normes de haute qualité. Des millions de Commentaires.</p>
+    </div>
+    <div class="medal">
+      <img src="/Images/medal.svg fill.png" alt="medal " width="50"/>
+      <p class="medaltitel">Award-winning support</p>
+      <p class="medaltext">Nouveau prix? Nouveau plan? Aucun problème.Nous sommes là pour vous aider, 24h/24 et 7j/7.</p>
+    </div>
+    </div>
+  </div>
+
+  </main>
+<footer>
+  <div class="foot">
+  <h3>Contact </h3>
+  <p> N 433 Immeubles 3 Rue Zohour, Béni Mellals</p>
+  <p>contact @viatours.com</p>
+  </div>
+
+</footer>
+
 </body>
+
 </html>
