ajouter les liens

--- a/html/Destinations.html
+++ b/html/Destinations.html
@@ -23,11 +23,11 @@
         <nav class="nav">
             <ul>
                 <li><a href="">Destinations</a></li>
-                <li><a href="#">Activities</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="Activities.html">Activities</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
             <div class="btn">
-                <a href="#">Sign up</a>  
+                <a href="Signup.html">Sign up</a>  
             </div>
             <div class="btn">
                 <a class="btn2" href="Login.html">Log in</a>
